@@ -2,4 +2,3 @@ usr/include/*
 usr/lib/lib*.a
 usr/lib/lib*.so
 usr/lib/pkgconfig/*
-usr/lib/*.la
