@@ -1,0 +1,1 @@
+usr/lib/libdrm_intel.so.*
