@@ -1,0 +1,36 @@
+libdrm_intel.so.1 libdrm2 #MINVER#
+ drm_intel_bo_alloc@Base 2.4.1
+ drm_intel_bo_emit_reloc@Base 2.4.1
+ drm_intel_bo_exec@Base 2.4.1
+ drm_intel_bo_fake_alloc_static@Base 2.4.1
+ drm_intel_bo_fake_disable_backing_store@Base 2.4.1
+ drm_intel_bo_flink@Base 2.4.1
+ drm_intel_bo_gem_create_from_name@Base 2.4.1
+ drm_intel_bo_get_subdata@Base 2.4.1
+ drm_intel_bo_get_tiling@Base 2.4.1
+ drm_intel_bo_map@Base 2.4.1
+ drm_intel_bo_pin@Base 2.4.1
+ drm_intel_bo_reference@Base 2.4.1
+ drm_intel_bo_set_tiling@Base 2.4.1
+ drm_intel_bo_subdata@Base 2.4.1
+ drm_intel_bo_unmap@Base 2.4.1
+ drm_intel_bo_unpin@Base 2.4.1
+ drm_intel_bo_unreference@Base 2.4.1
+ drm_intel_bo_wait_rendering@Base 2.4.1
+ drm_intel_bufmgr_check_aperture_space@Base 2.4.1
+ drm_intel_bufmgr_destroy@Base 2.4.1
+ drm_intel_bufmgr_fake_contended_lock_take@Base 2.4.1
+ drm_intel_bufmgr_fake_evict_all@Base 2.4.1
+ drm_intel_bufmgr_fake_init@Base 2.4.1
+ drm_intel_bufmgr_fake_set_exec_callback@Base 2.4.1
+ drm_intel_bufmgr_fake_set_fence_callback@Base 2.4.1
+ drm_intel_bufmgr_fake_set_last_dispatch@Base 2.4.1
+ drm_intel_bufmgr_gem_enable_reuse@Base 2.4.1
+ drm_intel_bufmgr_gem_init@Base 2.4.1
+ drm_intel_bufmgr_set_debug@Base 2.4.1
+ drm_mmAllocMem@Base 2.4.1
+ drm_mmDestroy@Base 2.4.1
+ drm_mmDumpMemInfo@Base 2.4.1
+ drm_mmFindBlock@Base 2.4.1
+ drm_mmFreeMem@Base 2.4.1
+ drm_mmInit@Base 2.4.1
