@@ -1,1 +1,1 @@
-usr/lib/lib*.so.*
+usr/lib/libdrm.so.*
