@@ -85,13 +85,15 @@ binary-arch: build install
 	dh_installchangelogs ChangeLog
 	dh_installdocs
 	dh_installexamples
-	dh_install --sourcedir=debian/tmp -Xlibdrm.la --list-missing
+	dh_install -s --sourcedir=debian/tmp -X.la --list-missing
 	dh_link
 	dh_strip -plibdrm2 --dbg-package=libdrm2-dbg
+	dh_strip -plibdrm-intel1 --dbg-package=libdrm-intel1-dbg
 	dh_strip
 	dh_compress
 	dh_fixperms
-	dh_makeshlibs -- -c4
+	dh_makeshlibs -plibdrm2 -V'libdrm2 (>=2.4.1)' -- -c4
+	dh_makeshlibs -plibdrm-intel1 -V'libdrm-intel1 (>=2.4.1)' -- -c4
 	dh_installdeb
 	dh_shlibdeps
 	dh_gencontrol
